force-app/main/default/objects/Job__c/fields/Address_Information__c.field-meta.xml
<CustomField>
    <fullName>Address_Information__c</fullName>
    <formula>if(LEN(Customer__r.Entrance_Instruction__c )&gt;0,  &quot;Entry Code : &quot;&amp;Customer__r.Entrance_Instruction__c&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Customer__r.BillingStreet)&gt;0, Customer__r.BillingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Customer__r.BillingCity)&gt;0, Customer__r.BillingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(Customer__r.BillingState)&gt;0, Customer__r.BillingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Customer__r.BillingPostalCode)&gt;0, Customer__r.BillingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN(Customer__r.BillingCountry) &gt;0, Customer__r.BillingCountry,&quot;&quot;)&amp; BR() &amp;  BR() &amp;

iF(ISPICKVAL( Customer__r.Parking__c,&quot;&quot; ),&quot;&quot;,&quot;Parking : &quot;&amp;TEXT(Customer__r.Parking__c)) &amp;  BR() &amp;
iF(ISPICKVAL( Customer__r.Trash_Disposal__c,&quot;&quot; ),&quot;&quot;,&quot;Trash Disposal : &quot;&amp;TEXT(Customer__r.Trash_Disposal__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Information</label>
    <type>Text</type>
</CustomField>