force-app/main/default/objects/Job__c/fields/Cleaning_Professional__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Professional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cleaning Professional</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>