force-app/main/default/objects/Job__c/fields/Interested_Services__c.field-meta.xml
<CustomField>
    <fullName>Interested_Services__c</fullName>
    <label>Interested Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>House Cleaning</fullName>
            </value>
            <value>
                <fullName>Floor Cleaning</fullName>
            </value>
            <value>
                <fullName>Roof Cleaning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>